--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,6 +4,7 @@
 <%= @photo.caption %>
 <h2>Leave a Comment</h2>
 <%= form_for [@photo, @comment] do |form| %>
+  <%= form.hidden_field :user_id, :value => current_user.id rescue "" %>
   <%= form.label :comment %>
   <%= form.text_area :comment %>
   <%= form.submit "Post Comment" %>
@@ -11,7 +12,7 @@
 <h2>Comments</h2>
 <dl>
 <% @comments.each do |comment| %>	
-	<dt>Username<%#= comment.user.name %></dt>
+	<dt><%= comment.user.name rescue "Guest" %></dt>
 	<dd><%= comment.comment %></dd>
 <% end %>
 </dl>
