--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -15,7 +15,7 @@
 
 	<div class="col col-lg-6">
 		<h1>Recent Photos</h1>
-		<ul>
+		<ul id="instalist">
 		<% @photos.each do |photo| %>
 			<li>
 				<%= link_to photo do %>
