--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$light-orange: #ff8c00;
+$light-gray: #EFEFEF;
 $border-color:#666;
 
 @mixin border-radius($radius) {
@@ -11,6 +11,13 @@ $border-color:#666;
           border-radius: $radius;
 }
 
-body {background-color:$light-orange;}
+body {background-color:$light-gray;}
 
-#instalist li { @include border-radius(10px);border:solid 1px $border-color;}
+#instalist {margin:0;padding:0;}
+#instalist li { @include border-radius(10px);border:solid 1px $border-color;list-style:none;text-align:center;margin-bottom:1em;width:100%;float:left;}
+#instalist li big {display:block;}
+
+form textarea,
+form input {width:100%;}
+form label {display:block;cursor:pointer;}
+form input[type="submit"] {float:right;margin-top:2em;}
